src/styles/components/ProjectCard.css
.project-container {
  border-radius: 1rem;
  padding: 1rem;
  margin: 1rem;
  width: 20rem;
  height: 26rem;
  display: flex;
  flex-direction: column;
  justify-content: space-between;
  align-items: center;
  background-color: var(--color-primary-lighter);
  color: var(--color-dark-font);
  box-shadow: 1rem 1rem 0.5rem rgba(0, 0, 0, 0.5);
}

.project-image {
  width: 100%;
  height: 10rem;
  object-fit: cover;
  border-radius: 0.5rem;
}

.project-image:hover {
  opacity: 0.8;
}

.project-image:active {
  opacity: 1;
}

.project-title {
  font-size: 1.5rem;
  font-weight: bold;
  margin: 0.5rem;
  text-align: center;
}

.project-description {
  font-size: 0.8rem;
  margin: auto;
  text-align: center;
  opacity: 0.7;
  height: 40px;
  margin-bottom: 0.5rem;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
}

.project-stack-icon-container {
  display: flex;
  flex-direction: row;
  justify-content: center;
  align-items: center;
  margin: 2px auto;
  flex-wrap: wrap;
  height: 6rem;
}

.project-stack-icon {
  width: 2rem;
  margin: 0.5rem;
}

.project-link-container {
  display: flex;
  flex-direction: row;
  justify-content: center;
  align-items: center;
  margin: auto;
  align-self: flex-end;
}

.project-link {
  margin: 0 0.5rem 0 0.5rem;
  display: flex;
  flex-direction: row;
  justify-content: center;
  align-items: center;
  transition: transform 0.6s;
  text-decoration: none;

}

.project-link-button {
  background-color: transparent;
  border: none;
  padding: 5px;
  border-radius: 5px;
  font-weight: 500;
  cursor: pointer;
  color: var(--color-dark-font);
  font-size: 1rem;
}

.project-link:hover {
  transform: scale(1.1);
}

.project-link:active {
  transform: scale(1);
}

.project-link-icon {
  width: 1.5rem;
  height: 2rem;
}

@media only screen and (max-width: 768px) {
  .project-container {
    height: auto;
  }

  .project-description {
    height: auto;
    margin: 0 0 1rem 0;
    width: 90%;
    font-size: 1rem;
  }

  .project-stack-icon-container{
    height: auto;
    width: 90%;
  }

  .project-link-container {
    margin: 0.5rem auto;
    flex-direction: column;
    width: 100%;
    height: auto;
  }
  
  .project-link {
    margin: 0.5rem 0 0.5rem 0;
    padding: 0.5rem;
    background-color: var(--color-button-hover-1);
    width: 80%;
    border-radius: 5px;
  }
}

